Make programs, about, and explore match the design more closely

--- a/explore.html
+++ b/explore.html
@@ -3,90 +3,98 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Explore</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 </head>
 <body>
 
-	<header>
-		<h2><a href="/karma-redesign/home.html">Karma Rescue</a></h2>
+	<header class="header">
+		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
 		<nav>
 			<ul>
 				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
 				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
 				<li><a href="/karma-redesign/donate/">Donate</a></li>
 				<li><a href="/karma-redesign/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/about/">About Us</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<ul class="explore">
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Learn about<br /><strong>Karma Rescue</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Support<br /><strong>The Cody Fund</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Help<br /><strong>Foster Program</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Support<br /><strong>10,000 Paws Project</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Help<br /><strong>The Guardian Angel Program</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Learn about<br /><strong>Volunteering Opportunities</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Support <br /><strong>Sid’s Spay/Neuter Program</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Learn about<br /><strong>How to Donate</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Support<br /><strong>special donations in honor or memory of...</strong>
-			</a>
-		</li>
-		<li>
-			<a href="">
-				<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-				Help<br /><strong>volunteer for adoption events</strong>
-			</a>
-		</li>
-	</ul>
+	<section class="text">
+
+		<h1>Explore</h1>
+
+		<ul class="explore">
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Learn about<br /><strong>Karma Rescue</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Support<br /><strong>The Cody Fund</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Help<br /><strong>Foster Program</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Support<br /><strong>10,000 Paws Project</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Help<br /><strong>The Guardian Angel Program</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Learn about<br /><strong>Volunteering Opportunities</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Learn about<br /><strong>How to Donate</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Support<br /><strong>special donations in honor or memory of...</strong>
+				</a>
+			</li>
+			<li>
+				<a href="">
+					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
+					Help<br /><strong>volunteer for adoption events</strong>
+				</a>
+			</li>
+		</ul>
+
+	</section>
 
 </body>
 </html>
