--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						<ul>
 							<li><a href="/karma-redesign/home.html">Home</a></li>
 							<li><a href="/karma-redesign/explore.html">Explore</a></li>
-							<li><a href="/karma-redesign/about/index.html">About Us</a></li>
+							<li><a href="/karma-redesign/about/">About Us</a></li>
 						</ul>
 					</section>
 					<section>
