--- a/volunteer/details.html
+++ b/volunteer/details.html
@@ -3,70 +3,76 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Volunteer Details</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 </head>
 <body>
 
-	<header>
-		<h2><a href="/karma-redesign/home.html">Karma Rescue</a></h2>
+	<header class="header">
+		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
 		<nav>
 			<ul>
 				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
 				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
 				<li><a href="/karma-redesign/donate/">Donate</a></li>
 				<li><a href="/karma-redesign/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/about/">About Us</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<h1>Foster Homes</h1>
+	<section class="text">
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h1>Foster Homes</h1>
 
-	<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
-
-	<h2>Detailed Info</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-	<h3>Testimonials</h3>
-	<blockquote>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p class="cite">–John Doe</p>
-	</blockquote>
 
-	<h2>How you can participate</h2>
+		<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
 
-	<h3>Donate</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation.</p>
+		<h2>Detailed Info</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-	<h3>Volunteer</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation.</p>
+		<h3>Testimonials</h3>
+		<blockquote>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p class="cite">–John Doe</p>
+		</blockquote>
 
-	<h3>Related Information</h3>
-	<ul>
-		<li><a href="">Lorem</a></li>
-		<li><a href="">Ipsum</a></li>
-		<li><a href="">Dolar</a></li>
-	</ul>
+		<h2>How you can participate</h2>
+
+		<h3>Donate</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation.</p>
+
+		<h3>Volunteer</h3>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation.</p>
+
+		<h3>Related Information</h3>
+		<ul>
+			<li><a href="">Lorem</a></li>
+			<li><a href="">Ipsum</a></li>
+			<li><a href="">Dolar</a></li>
+		</ul>
+
+	</section>
 
 </body>
 </html>
