--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -4,74 +4,66 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Volunteer</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 </head>
 <body>
 
-	<header>
-		<h2><a href="/karma-redesign/home.html">Karma Rescue</a></h2>
+	<header class="header">
+		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
 		<nav>
 			<ul>
 				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
 				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
 				<li><a href="/karma-redesign/donate/">Donate</a></li>
 				<li><a href="/karma-redesign/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/about/">About Us</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<h1>Volunteer</h1>
+	<section class="text">
 
-	<section>
-		<image src="http://placehold.it/900x300" alt="" />	
+		<div class="intro">
+			<h1>Volunteer</h1>
+			<img src="/karma-redesign/assets/images/volunteer/header.jpg" alt="" />	
+			<p>Nciduis dolorem zzrit vent lumsan ulluptat, sustis num nim ex et alisim iusciduisit.</p>
+			<p class="action"><a href="">Get Involved</a></p>
+		</div>
 
-		<h2><a href="">Featured Program</a></h2>
+		<section class="featured program">
+			<h2><a href="">Foster Program</a></h2>
+			<img src="/karma-redesign/assets/images/volunteer/feature-a.jpg" alt="" />	
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 
-		<form><button>Donate</button></form>
-	</section>
+			<p class="action"><a href="">Get Involved</a></p>
+		</section>
 
-	<section>
-		<img src="http://placehold.it/300x200" alt="" />	
+		<section class="featured program">
+			<h2><a href="">Guardian Angel Program</a></h2>
+			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-		<h2><a href="">Featured Program</a></h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+			<p class="action"><a href="">Get Involved</a></p>
+		</section>
 
-		<form><button>Donate</button></form>
-	</section>
+		<section class="featured program">
+			<h2><a href="">Sponsorship Program</a></h2>
+			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
 
-	<section>
-		<img src="http://placehold.it/300x200" alt="" />	
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
 
-		<h2><a href="">Featured Program</a></h2>
+			<p class="action"><a href="">Get Involved</a></p>
+		</section>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-
-		<form><button>Donate</button></form>
-	</section>
-
-	<section>
-		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
-	</section>
-
-	<section>
-		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
-	</section>
-
-	<section>
-		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
-	</section>
-
-	<section>
-		<h2><a href=""><img src="http://placehold.it/100x75" alt="" /> Featured Program</a></h2>
 	</section>
 
 </body>
