Make explore page match the design

--- a/explore.html
+++ b/explore.html
@@ -23,73 +23,77 @@
 
 	<section class="text">
 
-		<h1>Explore</h1>
-
 		<ul class="explore">
-			<li>
+			<li class="tangerine">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Learn about<br /><strong>Karma Rescue</strong>
+					<img src="/karma-redesign/assets/images/explore/karma.jpg" width="300" height="300" alt="" /><br />
+					<span>Learn about<br /><strong>Karma Rescue</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Support<br /><strong>The Cody Fund</strong>
+					<img src="/karma-redesign/assets/images/explore/cody.jpg" width="300" height="300" alt="" /><br />
+					<span>Support<br /><strong>The Cody Fund</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="strawberry">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Help<br /><strong>Foster Program</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Help<br /><strong>Foster Program</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Support<br /><strong>10,000 Paws Project</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Support<br /><strong>10,000 Paws Project</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="strawberry">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Help<br /><strong>The Guardian Angel Program</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Help<br /><strong>The Guardian Angel Program</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="tangerine">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Learn about<br /><strong>Volunteering Opportunities</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Learn about<br /><strong>Volunteering Opportunities</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Support <br /><strong>Project Coco</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Learn about<br /><strong>How to Donate</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Support <br /><strong>Sid’s Spay/Neuter Program</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="tangerine">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Support<br /><strong>special donations in honor or memory of...</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Learn about<br /><strong>How to Donate</strong></span>
 				</a>
 			</li>
-			<li>
+			<li class="lime">
 				<a href="">
-					<img src="http://placehold.it/300x300" width="300" height="300" alt="" /><br />
-					Help<br /><strong>volunteer for adoption events</strong>
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Support<br /><strong>special donations in honor or memory of...</strong></span>
+				</a>
+			</li>
+			<li class="strawberry">
+				<a href="">
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+					<span>Help<br /><strong>volunteer for adoption events</strong></span>
 				</a>
 			</li>
 		</ul>
