--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
 					<section>
 						<h3>Donate</h3>
 						<ul>
-							<li><a href="/karma-redesign/donate/">Features</a></li>
-							<li><a href="/karma-redesign/donate/details.html">Donate Details</a></li>
+							<li><a href="/karma-redesign/donate/">Programs</a></li>
+							<li><a href="/karma-redesign/donate/details.html">Details</a></li>
 						</ul>
 					</section>
 					<section>
 						<h3>Volunteer</h3>
 						<ul>
-							<li><a href="/karma-redesign/volunteer">Features</a></li>
-							<li><a href="/karma-redesign/volunteer/details.html">Volunteer details</a></li>
+							<li><a href="/karma-redesign/volunteer">Programs</a></li>
+							<li><a href="/karma-redesign/volunteer/details.html">Program Details</a></li>
 						</ul>
 					</section>
 					<section>
