--- a/volunteer/details.html
+++ b/volunteer/details.html
@@ -32,22 +32,24 @@
 		<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
 
 		<h2>Detailed Info</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>A vital part of the rescue process is fostering. A foster parent fulfills an integral role by providing the initial safe and secure environment for a rescued dog. By taking in a newly rescued dog, you enable us to pull another dog in need from the Los Angeles area shelters.
+
+During the transition phase from shelter to home, rescued dogs require emotional support. A foster parent must provide a nurturing atmosphere that includes shelter, exercise, and most importantly, love. It takes a special person who can provide all of this for a rescued dog and then give them up when a permanent home is found.
+
+Foster parents can also contribute immensely in placing rescued dogs in appropriately matched homes. By observing their fostered dog’s specific personality traits, we gather essential information necessary for placing each dog in the right home.</p>
 
 		<h3>Testimonials</h3>
 		<blockquote>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<p class="cite">–John Doe</p>
+			<p>Fostering for Karma has been an amazing experience. We get to see our foster dogs true personality come alive as we provide a stable home with discipline and love. Knowing that we play such a vital role in saving his life and ensuring his future is a humbling experience. We love being a foster family for these beautiful dogs!</p>
+			<p class="cite">–J.C.</p>
+		</blockquote>
+		<blockquote>
+			<p>Fostering for Karma has been an amazing experience. We get to see our foster dogs true personality come alive as we provide a stable home with discipline and love. Knowing that we play such a vital role in saving his life and ensuring his future is a humbling experience. We love being a foster family for these beautiful dogs!</p>
+			<p class="cite">–J.C.</p>
+		</blockquote>
+		<blockquote>
+			<p>In the past year and a half my roommate and I have fostered six different dogs. Some were adults and others only a few months old. It's a serious commitment to make but we are extremely grateful for the experiences we've had because of these dogs. A lot of love and hard works goes into caring for another living being, however the rewards are amazing! You get to learn each dog's unique personality, watch them learn, and grow up right before your eyes. It's the best feeling when the dogs get adopted because you know that they have found a forever home, but will always have a place in your heart. Fostering is something that I find extremely rewarding, and I just love helping these little nuggets find their place in the world.</p>
+			<p class="cite">–K.D.</p>
 		</blockquote>
 
 		<h2>How you can participate</h2>
