--- a/volunteer/details.html
+++ b/volunteer/details.html
@@ -23,26 +23,20 @@
 
 	<section class="text">
 
-		<h1>Foster Homes</h1>
+		<h1>Karma Rescue Foster Program</h1>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusHELLLLLLLLOOOOOOis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
 
 		<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
 
-		<h2>Detailed Info</h2>
+		<h2>More Information</h2>
 		<p>A vital part of the rescue process is fostering. A foster parent fulfills an integral role by providing the initial safe and secure environment for a rescued dog. By taking in a newly rescued dog, you enable us to pull another dog in need from the Los Angeles area shelters.
 
 During the transition phase from shelter to home, rescued dogs require emotional support. A foster parent must provide a nurturing atmosphere that includes shelter, exercise, and most importantly, love. It takes a special person who can provide all of this for a rescued dog and then give them up when a permanent home is found.
 
 Foster parents can also contribute immensely in placing rescued dogs in appropriately matched homes. By observing their fostered dog’s specific personality traits, we gather essential information necessary for placing each dog in the right home.</p>
 
-		<h3>Testimonials</h3>
-		<blockquote>
-			<p>Fostering for Karma has been an amazing experience. We get to see our foster dogs true personality come alive as we provide a stable home with discipline and love. Knowing that we play such a vital role in saving his life and ensuring his future is a humbling experience. We love being a foster family for these beautiful dogs!</p>
-			<p class="cite">–J.C.</p>
-		</blockquote>
+		<h3>Testimonials About Fostering</h3>
 		<blockquote>
 			<p>Fostering for Karma has been an amazing experience. We get to see our foster dogs true personality come alive as we provide a stable home with discipline and love. Knowing that we play such a vital role in saving his life and ensuring his future is a humbling experience. We love being a foster family for these beautiful dogs!</p>
 			<p class="cite">–J.C.</p>
@@ -55,14 +49,10 @@ Foster parents can also contribute immensely in placing rescued dogs in appropri
 		<h2>How you can participate</h2>
 
 		<h3>Donate</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation.</p>
+		<p>Help us place more rescue dogs in loving foster homes. Donate to Karma Rescue.</p>
 
 		<h3>Volunteer</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation.</p>
+		<p>Interested in becoming a foster parent? We are always looking for great foster homes for our dogs. Please complete our Karma Rescue Dog Fostering Application and we'll be in touch!</p>
 
 		<h3>Related Information</h3>
 		<ul>
