--- a/donate/index.html
+++ b/donate/index.html
@@ -28,34 +28,30 @@
 		<div class="intro">
 			<h1>Donate</h1>
 			<img src="/karma-redesign/assets/images/donate/header.jpg" alt="" />	
-			<p>Nciduis dolorem zzrit vent lumsan ulluptat, sustis num nim ex et alisim iusciduisit.</p>
+			<p>Karma Rescue runs on the dog-loving fuel of our volunteers. Here’s how you can get involved.</p>
 			<p class="action"><a href="">Donate</a></p>
 		</div>
 
-		<section class="featured program">
+		<section class="Be a Guardian Angel">
 			<h2><a href="">10,000 Paws</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+			<p>Not everyone is able to foster or adopt a dog, but anyone can become a guardian angel. Take Sparky for a walk, go on a hike and show our pups some love.</p>
 
 			<p class="action"><a href="">Donate</a></p>
 		</section>
 
-		<section class="featured program">
+		<section class="Be a Foster Parent:">
 			<h2><a href="">Another Featured Program</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+			<p>A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
 
 			<p class="action"><a href="">Donate</a></p>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">Volunteer at Our Adoption Events</a></h2>
 		</section>
 
 		<section>
