--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -27,41 +27,41 @@
 		<div class="intro">
 			<h1>Volunteer</h1>
 			<img src="/karma-redesign/assets/images/volunteer/header.jpg" alt="" />	
-			<p>Nciduis dolorem zzrit vent lumsan ulluptat, sustis num nim ex et alisim iusciduisit.</p>
+			<p>Karma Rescue runs on the dog-loving fuel of our volunteers. Here’s how you can get involved.</p>
 			<p class="action"><a href="">Get Involved</a></p>
 		</div>
 
 		<section class="featured program">
-			<h2><a href="">Foster Program</a></h2>
+			<h2><a href="">Be a Guardian Angel</a></h2>
 			<img src="/karma-redesign/assets/images/volunteer/feature-a.jpg" alt="" />	
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+			<p>Not everyone is able to foster or adopt a dog, but anyone can become a guardian angel. Take Sparky for a walk, go on a hike and show our pups some love.</p>
 
 			<p class="action"><a href="">Get Involved</a></p>
 		</section>
 
 		<section class="featured program">
-			<h2><a href="">Guardian Angel Program</a></h2>
+			<h2><a href="">Be a Foster Parent</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+			<p>A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
 
 			<p class="action"><a href="">Get Involved</a></p>
 		</section>
 
-		<section class="featured program">
-			<h2><a href="">Sponsorship Program</a></h2>
-			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-
 			<p class="action"><a href="">Get Involved</a></p>
+		</section>
+
+		<section>
+			<h2><a href="">Volunteer at Our Adoption Events</a></h2>
+		</section>
+
+		<section>
+			<h2><a href="">Help Karma with Social Media</a></h2>
+		</section>
+
+		<section>
+			<h2><a href="">Help Karma with our Website</a></h2>
 		</section>
 
 	</section>
