--- a/donate/index.html
+++ b/donate/index.html
@@ -28,50 +28,56 @@
 		<div class="intro">
 			<h1>Donate</h1>
 			<img src="/karma-redesign/assets/images/donate/header.jpg" alt="" />	
-			<p>Karma Rescue runs on the dog-loving fuel of our volunteers. Here’s how you can get involved.</p>
+			<p>Give a general donation, sponsor a specific pup or help fund our programs. Your generosity goes a long way.</p>
 			<p class="action"><a href="">Donate</a></p>
 		</div>
 
-		<section class="Be a Guardian Angel">
-			<h2><a href="">10,000 Paws</a></h2>
+		<section class="featured program">
+			<h2><a href="">Project Coco:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-			<p>Not everyone is able to foster or adopt a dog, but anyone can become a guardian angel. Take Sparky for a walk, go on a hike and show our pups some love.</p>
+			<h3>Support Pets through Basic Needs<h3>
+			<p>Not everyone has the knowledge and means to provide a safe and happy home for their pet. With Project Coco, we reach out to neighborhoods and households in need and provide basic materials and education to promote responsible animal care. You can help this effort through both monetary and material donations.</p>
 
 			<p class="action"><a href="">Donate</a></p>
 		</section>
 
-		<section class="Be a Foster Parent:">
-			<h2><a href="">Another Featured Program</a></h2>
+		<section class="featured program">
+			<h2><a href="">10,000 Paws:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
 
-			<p>A vital part of the rescue process is fostering. By taking in a newly rescued dog, not only will you receive a very special gift of joy, but you also enable us to give another dog from the Los Angeles area shelters a second chance.</p>
+			<h3>Join the 10,000 Paws Army<h3>
+			<p>We’re aiming high and dreaming big as we celebrate 10 years of transforming dog adoption in Los Angeles. Join our 10,000 Paws-strong army to raise $10,000 for dogs in need. Donate as little as $5 per month to help us continue our mission to make Los Angeles a no-kill city.</p>
 
 			<p class="action"><a href="">Donate</a></p>
 		</section>
 
 		<section>
-			<h2><a href="">Volunteer at Our Adoption Events</a></h2>
+			<h2><a href="">Sponsor a Dog, Save a Life</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">Sid’s Spay/Neuter Program</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">The Maxine Goldenson Foundation's Liping Animal Medical Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">Give to the Cody Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">Give to the Nova Fund</a></h2>
 		</section>
 
 		<section>
-			<h2><a href="">10,000 Paws</a></h2>
+			<h2><a href="">Donate Supplies and Materials</a></h2>
+		</section>
+
+		<section>
+			<h2><a href="">Support Pitbulls though the Amber Fund</a></h2>
 		</section>
 
 	</section>
