--- a/donate/index.html
+++ b/donate/index.html
@@ -36,7 +36,7 @@
 			<h2><a href="">Project Coco:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-			<h3>Support Pets through Basic Needs<h3>
+			<h3>Support Pets through Basic Needs</h3>
 			<p>Not everyone has the knowledge and means to provide a safe and happy home for their pet. With Project Coco, we reach out to neighborhoods and households in need and provide basic materials and education to promote responsible animal care. You can help this effort through both monetary and material donations.</p>
 
 			<p class="action"><a href="">Donate</a></p>
@@ -46,7 +46,7 @@
 			<h2><a href="">10,000 Paws:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-b.jpg" alt="" />	
 
-			<h3>Join the 10,000 Paws Army<h3>
+			<h3>Join the 10,000 Paws Army</h3>
 			<p>We’re aiming high and dreaming big as we celebrate 10 years of transforming dog adoption in Los Angeles. Join our 10,000 Paws-strong army to raise $10,000 for dogs in need. Donate as little as $5 per month to help us continue our mission to make Los Angeles a no-kill city.</p>
 
 			<p class="action"><a href="">Donate</a></p>
