Added pit bull disclaimer

--- a/adopt/details.html
+++ b/adopt/details.html
@@ -38,8 +38,8 @@
 			<dd>Male</dd>
 		</dl>
 		<h3>Biography</h3>
-		<p>My name is Sparky. I'm about 6 years old (June 2013). I have been through training with one of the best trainers in LA. I am looking for a companion that will help me to keep up with my training. I've recently passed the Canine Good Citizen test and received my Canine Good Citizen Certification! I am eager to please and would like a home that provides consistent training and structure. I am such a lover...I love everyone I meet. My perfect home would have the balance of love, leadership and family. I hope to find that soon!
-		Pit Bulls personalities are energetic, loyal, intelligent, fun loving, and affectionate. Pit Bulls require intelligent, responsible, and dedicated leadership. Because of the breed’s undeserved negative media image, human companions living with a pit bull have to be more careful and responsible than the average human dog companion.</p>
+		<p>My name is Sparky. I'm about 6 years old (June 2013). I have been through training with one of the best trainers in LA. I am looking for a companion that will help me to keep up with my training. I've recently passed the Canine Good Citizen test and received my Canine Good Citizen Certification! I am eager to please and would like a home that provides consistent training and structure. I am such a lover...I love everyone I meet. My perfect home would have the balance of love, leadership and family. I hope to find that soon!</p>
+		<p class = 'pitbulldisclaimer'>Pit Bulls personalities are energetic, loyal, intelligent, fun loving, and affectionate. Pit Bulls require intelligent, responsible, and dedicated leadership. Because of the breed’s undeserved negative media image, human companions living with a pit bull have to be more careful and responsible than the average human dog companion.</p>
 
 		<ul class="action">
 			<li><a href="meet.html">Meet me!</a></li>
