--- a/volunteer/index.html
+++ b/volunteer/index.html
@@ -28,7 +28,7 @@
 			<h1>Volunteer</h1>
 			<img src="/karma-redesign/assets/images/volunteer/header.jpg" alt="" />	
 			<p>Karma Rescue runs on the dog-loving fuel of our volunteers. Here’s how you can get involved.</p>
-			<p class="action"><a href="">Get Involved</a></p>
+			<p class="action"><a href="">Apply to Volunteer</a></p>
 		</div>
 
 		<section class="featured program">
