--- a/donate/index.html
+++ b/donate/index.html
@@ -29,7 +29,7 @@
 			<h1>Donate</h1>
 			<img src="/karma-redesign/assets/images/donate/header.jpg" alt="" />	
 			<p>Give a general donation, sponsor a specific pup or help fund our programs. Your generosity goes a long way.</p>
-			<p class="action"><a href="">Donate</a></p>
+			<p class="action"><a href="">Donate to Karma Rescue</a></p>
 		</div>
 
 		<section class="featured program">
@@ -39,7 +39,7 @@
 			<h3>Support Pets through Basic Needs</h3>
 			<p>Not everyone has the knowledge and means to provide a safe and happy home for their pet. With Project Coco, we reach out to neighborhoods and households in need and provide basic materials and education to promote responsible animal care. You can help this effort through both monetary and material donations.</p>
 
-			<p class="action"><a href="">Donate</a></p>
+			<p class="action"><a href="">Donate to Project Coco</a></p>
 		</section>
 
 		<section class="featured program">
@@ -49,7 +49,7 @@
 			<h3>Join the 10,000 Paws Army</h3>
 			<p>We’re aiming high and dreaming big as we celebrate 10 years of transforming dog adoption in Los Angeles. Join our 10,000 Paws-strong army to raise $10,000 for dogs in need. Donate as little as $5 per month to help us continue our mission to make Los Angeles a no-kill city.</p>
 
-			<p class="action"><a href="">Donate</a></p>
+			<p class="action"><a href="">Give a Monthly Donation</a></p>
 		</section>
 
 		<section>
