project coco update

--- a/donate/index.html
+++ b/donate/index.html
@@ -36,7 +36,7 @@
 			<h2><a href="">Project Coco:</a></h2>
 			<img src="/karma-redesign/assets/images/donate/feature-a.jpg" alt="" />	
 
-			<h3>Support Pets through Basic Needs</h3>
+			<h3>Project Coco Support Pets through Basic Needs</h3>
 			<p>Not everyone has the knowledge and means to provide a safe and happy home for their pet. With Project Coco, we reach out to neighborhoods and households in need and provide basic materials and education to promote responsible animal care. You can help this effort through both monetary and material donations.</p>
 
 			<p class="action"><a href="">Donate to Project Coco</a></p>
