text is shown over hovering image in explore tab

--- a/explore.html
+++ b/explore.html
@@ -27,73 +27,125 @@
 			<li class="tangerine">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/karma.jpg" width="300" height="300" alt="" /><br />
-					<span>Learn about<br /><strong>Karma Rescue</strong></span>
+                    <span>Learn about<br /><strong>Karma Rescue</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula. dolor sit amet, consectetur adipiscing
+                            elit. Etiam pharetra, lectus ut pellentesque
+                            aliquet, lorem magna elementum leo, vel tincidunt
+                            arcu metus lobortis turpis. Fusce in aliquet magna,
+                            in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/cody.jpg" width="300" height="300" alt="" /><br />
-					<span>Support<br /><strong>The Cody Fund</strong></span>
+                    <span>Support<br /><strong>The Cody Fund</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="strawberry">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Help<br /><strong>Foster Program</strong></span>
+                    <span>Help<br /><strong>Foster Program</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Support<br /><strong>10,000 Paws Project</strong></span>
+                    <span>Support<br /><strong>10,000 Paws Project</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="strawberry">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Help<br /><strong>The Guardian Angel Program</strong></span>
+                    <span>Help<br /><strong>The Guardian Angel Program</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="tangerine">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Learn about<br /><strong>Volunteering Opportunities</strong></span>
+                    <span>Learn about<br /><strong>Volunteering Opportunities</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Support <br /><strong>Project Coco</strong></span>
+                    <span>Support <br /><strong>Project Coco</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong></span>
+                    <span>Support <br /><strong>Maxine Goldenson Foundation's Liping Animal Medical Fund</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Support <br /><strong>Sid’s Spay/Neuter Program</strong></span>
+                    <span>Support <br /><strong>Sid’s Spay/Neuter Program</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="tangerine">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Learn about<br /><strong>How to Donate</strong></span>
+                    <span>Learn about<br /><strong>How to Donate</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="lime">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Support<br /><strong>special donations in honor or memory of...</strong></span>
+                    <span>Support<br /><strong>special donations in honor or memory of...</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 			<li class="strawberry">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-					<span>Help<br /><strong>volunteer for adoption events</strong></span>
+                    <span>Help<br /><strong>volunteer for adoption events</strong>
+                        <p class="img-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pharetra, lectus ut pellentesque aliquet, lorem magna elementum leo, vel tincidunt arcu metus lobortis turpis. Fusce in aliquet magna, in rutrum neque. Nullam rhoncus orci ligula.
+                        </p>
+                    </span>
 				</a>
 			</li>
 		</ul>
