Add an example adopt page

--- a/adopt/index.html
+++ b/adopt/index.html
@@ -1,112 +1,147 @@
----
-layout: master_default
-description: Karma Rescue home page
----
-<link rel="stylesheet" href="karma-redesign/css/adopt.css"/>
-	<h1>Adopt a Pet</h1>
-	<h2>What kind of dog are you looking for?</h2>
 
-	<form class="adopt-search" action="results.html" method="get">
-		<fieldset>
-			<legend>Good With</legend>
+<!doctype html>
+<html lang="en" dir="ltr">
+<head>
+	<meta charset="utf-8" />
+	<title>Sparky the Dog</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
+	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
+</head>
+<body>
+
+	<header class="header">
+		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
+		<nav>
 			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Kids</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Cats</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Dogs</span>
-					</label>
-				</li>
+				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
+				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
+				<li><a href="/karma-redesign/donate/">Donate</a></li>
+				<li><a href="/karma-redesign/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/about/">About Us</a></li>
 			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Size</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Small</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Medium</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Large</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Extra Large</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Gender</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Male</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Female</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<fieldset>
-			<legend>Size</legend>
-			<ul>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Puppy</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Young</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Large</span>
-					</label>
-				</li>
-				<li>
-					<label>
-						<input type="checkbox" />
-						<span>Extra Large</span>
-					</label>
-				</li>
-			</ul>
-		</fieldset>
-		<p>
-		<button type="submit">Go</button>
-		</p>
-	</form>
-</div>
+		</nav>
+	</header>
+
+	<section class="text">
+
+		<img src="/karma-redesign/assets/images/adopt/sparky.jpg" alt="" />
+
+		<form class="adopt-search" action="" method="get">
+			<fieldset>
+				<legend>Good With</legend>
+				<ul>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Kids</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Cats</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Dogs</span>
+						</label>
+					</li>
+				</ul>
+			</fieldset>
+			<fieldset>
+				<legend>Size</legend>
+				<ul>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Small</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Medium</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Large</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Extra Large</span>
+						</label>
+					</li>
+				</ul>
+			</fieldset>
+			<fieldset>
+				<legend>Gender</legend>
+				<ul>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Male</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Female</span>
+						</label>
+					</li>
+				</ul>
+			</fieldset>
+			<fieldset>
+				<legend>Size</legend>
+				<ul>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Puppy</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Young</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Large</span>
+						</label>
+					</li>
+					<li>
+						<label>
+							<input type="checkbox" />
+							<span>Extra Large</span>
+						</label>
+					</li>
+				</ul>
+			</fieldset>
+			<p>
+			<button type="submit">Go</button>
+			</p>
+		</form>
+
+		<ul class="list">
+			<li>
+				<a href="">
+					<img src="http://placehold.it/200x200" width="200" height="200" alt="" />
+					Biscuit 3 y.0. male mix
+					This is our new little boy Biscuit. He is 3 years old and as big as a bowl of soup!  He is the sweetest little guy…
+				</a>
+				<form action="" method="post"><button>Save</button></form>
+			</li>
+		</ul>
+
+	</section>
+
+</body>
+</html>
