--- a/explore.html
+++ b/explore.html
@@ -117,16 +117,6 @@
                     </span>
 				</a>
 			</li>
-			<li class="lime">
-				<a href="">
-					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
-                    <span>Support<br /><strong>The Nova Fund</strong>
-                        <p class="img-description">
-                            Give to our small dog adoption program in memory of our pal Nova, a Cavalier King Charles Spaniel mix with special needs.
-                        </p>
-                    </span>
-				</a>
-			</li>
 			<li class="tangerine">
 				<a href="">
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
@@ -147,6 +137,16 @@
                     </span>
 				</a>
 			</li>
+			<li class="tangerine">
+				<a href="">
+					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
+                    <span>Learn<br /><strong>Watch Our Videos</strong>
+                        <p class="img-description">
+                            From short dog documentaries to rescue stories and news footage, see what Karma Rescue is all about. 
+                        </p>
+                    </span>
+				</a>
+			</li>	
 		</ul>
 
 	</section>
