--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,10 @@
 
 		<img src="/karma-redesign/assets/images/about/header.jpg" alt="" />
 
-		<h1>Creating a compassionate society that provides safety, refuge and protection for all animals.</h1>
+		<h1>Our vision is to create a compassionate society that provides safety, refuge and protection for all animals.</h1>
+
+		<h2>Mission Statement</h2>
+		<p> Karma Rescue is a non-profit organization dedicated to saving animals in need by finding them permanent homes and providing the resources for successful companionship. Through education, we instill the critical need for spay/neuter and offer guidance to strengthen the animal-human bond. </p>
 
 		<h2>History</h2>
 		<p class="by">Rande Levine</p>
