--- a/explore.html
+++ b/explore.html
@@ -102,7 +102,7 @@
 					<img src="/karma-redesign/assets/images/explore/foster.jpg" width="300" height="300" alt="" /><br />
                     <span>Support <br /><strong>Sid’s Spay/Neuter Program</strong>
                         <p class="img-description">
-                            We believe all dogs should be safe and loved. To combat overpopulation and euthanization, help us reach our goal of spaying/neutering 250 dogs every year. 
+                            We believe all dogs should be safe and loved. To combat overpopulation, help us reach our goal of spaying/neutering 250 dogs every year. 
                         </p>
                     </span>
 				</a>
