Changed font format for explore, changing details page

--- a/home.html
+++ b/home.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="utf-8"/>
     <title>Karma Rescue</title>
+	<link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Oswald:400,300,700" />
+	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/basic.css" />
 	<link type="text/css" rel="stylesheet" href="/karma-redesign/css/home.css" />
 </head>
 <body>
 	<div class="container">
+	<header class="header">
+		<h2><a href="/karma-redesign/home.html"><img src="/karma-redesign/assets/images/shared/karma-rescue.png" width="130" alt="" /></a></h2>
+		<nav>
+			<ul>
+				<li><a href="/karma-redesign/adopt/">Adopt</a></li>
+				<li><a href="/karma-redesign/volunteer/">Volunteer</a></li>
+				<li><a href="/karma-redesign/donate/">Donate</a></li>
+				<li><a href="/karma-redesign/explore.html">Explore</a></li>
+				<li><a href="/karma-redesign/about/">About Us</a></li>
+			</ul>
+		</nav>
+	</header>
 	    <!-- Show a large image to display one of the rescues and have a little
 	        content for people to learn more. -->
 	    <div class="home-main-img">
